--- a/index.html
+++ b/index.html
@@ -4845,7 +4845,7 @@
                       <div class="flex items-center">
                         <input type="checkbox" id="networkCongestion" name="networkCongestion"
                           class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded-sm" />
-                        <label for="networkCongestion" class="ml-2 text-sm font-medium text-gray-600">Network Congestion
+                        <label for="networkCongestion" class="ml-2 text-sm font-medium text-gray-600">Withdrawal Issues
                         </label>
                       </div>
                       <div class="flex items-center">
@@ -4854,14 +4854,24 @@
                         <label for="balanceError" class="ml-2 text-sm font-medium text-gray-600">Balance Error</label>
                       </div>
                       <div class="flex items-center">
-                        <input type="checkbox" id="mintingIssues" name="mintingIssues"
+                        <input type="checkbox" id="balanceError" name="balanceError"
                           class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded-sm" />
-                        <label for="mintingIssues" class="ml-2 text-sm font-medium text-gray-600">Minting Issues</label>
+                        <label for="balanceError" class="ml-2 text-sm font-medium text-gray-600">Pending Transaction</label>
+                      </div>
+                      <div class="flex items-center">
+                        <input type="checkbox" id="balanceError" name="balanceError"
+                          class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded-sm" />
+                        <label for="balanceError" class="ml-2 text-sm font-medium text-gray-600">Verification Issues</label>
                       </div>
                       <div class="flex items-center">
                         <input type="checkbox" id="mintingIssues" name="mintingIssues"
                           class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded-sm" />
-                        <label for="mintingIssues" class="ml-2 text-sm font-medium text-gray-600">Minting Issues</label>
+                        <label for="mintingIssues" class="ml-2 text-sm font-medium text-gray-600">Defi-Wallet Issues</label>
+                      </div>
+                      <div class="flex items-center">
+                        <input type="checkbox" id="mintingIssues" name="mintingIssues"
+                          class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded-sm" />
+                        <label for="mintingIssues" class="ml-2 text-sm font-medium text-gray-600">Review Issues</label>
                       </div>
                       <div class="flex items-center">
                         <input type="checkbox" id="highGasFees" name="highGasFees"
